--- a/nlp-notebook-example.ipynb
+++ b/nlp-notebook-example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a3a394b3",
    "metadata": {},
    "outputs": [
@@ -10,23 +10,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\causb1a\\AppData\\Roaming\\Python\\Python36\\site-packages\\pandas\\compat\\_optional.py:124: UserWarning: Pandas requires version '1.2.1' or newer of 'bottleneck' (version '1.2.0' currently installed).\n",
-      "  warnings.warn(msg, UserWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\causb1a\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data]     /Users/adriancausby/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\causb1a\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data]     /Users/adriancausby/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/wordnet.zip.\n",
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\causb1a\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data]     /Users/adriancausby/nltk_data...\n",
+      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
      ]
     }
    ],
@@ -245,8 +237,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "0e514c5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from textblob import TextBlob \n",
+    "from textblob import Word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "974c5187",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '‘' (U+2018) (1039594778.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/_m/wln3cs4x1pl4x9k4__lnyls00000gn/T/ipykernel_21531/1039594778.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    df[‘spell_checked’] = df[‘tweet’].apply(lambda x: ‘’.join(TextBlob(x).correct()))\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '‘' (U+2018)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df['spell_checked'] = df['tweet'].apply(lambda x: ''.join(TextBlob(x).correct()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb4492f5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -268,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
